--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,10 +7,13 @@
     font-weight: 100;
 }
 
-.fas:hover, .fa:hover {
+.fas:hover,
+.fa:hover {
     transition: ease all 200ms;
 }
-.fas:hover, .fa:hover {
+
+.fas:hover,
+.fa:hover {
     color: #358df9d4 !important;
 }
 
@@ -621,26 +624,37 @@ input:focus {
 /* message area */
 
 .message_area {
-    height: 92vh;
+    display: flex;
+    flex-direction: column;
+    height: 88vh;
     width: 100%;
-    padding: 1rem 2.5rem;
     background-color: #cae9eb;
+}
+
+.message_container {
+    padding: 0px 2rem;
+    flex-grow: 1;
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 
 .message {
-    display: block;
     clear: both;
     position: relative;
     padding: 0.3rem 1.5rem;
     max-width: 80%;
     margin-top: 1.4rem;
+    flex-shrink: 0;
+}
+
+.message:last-child {
+    margin-bottom: 1.4rem;
 }
 
 .message.sent {
     float: right;
     border: 1.1px solid #cacaca;
-    border-radius: 0px 0px 5px 5px;
+    border-radius: 5px 0px 5px 5px;
     background-color: white;
     box-shadow: -4px 4px 13px 2px rgba(65, 255, 235, 0.15);
 }
@@ -705,23 +719,20 @@ input:focus {
 /* input area */
 .input_area {
     background-color: white;
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    min-width: 100%;
-    box-sizing: content-box;
+    flex-shrink: 0;
     border: solid 2px #13988a;
     box-shadow: 0px -5px 7px 3px rgba(127, 255, 232, 0.18);
     display: flex;
+    margin: 0px;
 }
 
 .input_area textarea {
-    flex-basis: 85%;
     height: 3rem;
     border: none;
     resize: none;
     padding: 0.6rem 0.6rem 0rem 2rem;
     transition: ease all 250ms;
+    flex-grow: 1;
 }
 
 .input_area textarea:focus {
@@ -738,7 +749,8 @@ input:focus {
 }
 
 .input_area button {
-    flex-basis: 15%;
+    flex-shrink: 0;
+    width: 6rem;
     border: none;
     color: white;
     background-color: #13988a;
@@ -750,18 +762,18 @@ input:focus {
 
 /* scroll bar */
 
-.message_area::-webkit-scrollbar-track {
+.message_container::-webkit-scrollbar-track {
     background-color: transparent;
     border-radius: 10px;
     position: relative;
 }
 
-.message_area::-webkit-scrollbar {
+.message_container::-webkit-scrollbar {
     width: 6px;
     background-color: transparent;
 }
 
-.message_area::-webkit-scrollbar-thumb {
+.message_container::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background-color: #0f7cff;
 }
@@ -774,12 +786,13 @@ input:focus {
     width: 100vw;
     height: 100vh;
     background-color: black;
-    opacity: 0.5;
+    opacity: 0;
     z-index: 0;
     transition: ease-in-out all 350ms;
 }
 
 .back_toggle {
+    opacity: 0.45;
     z-index: 1;
 }
 
@@ -905,14 +918,6 @@ input:focus {
     .chat_nav .menu_dots {
         display: none;
     }
-
-    /* input area */
-    .input_area {
-        position: fixed;
-        bottom: 0px;
-        left: 0px;
-    }
-
 }
 
 @media only screen and (min-width:576px)and (max-width:992px) {
@@ -958,16 +963,6 @@ input:focus {
 
     .hide-xs {
         display: none;
-    }
-
-    /* input field chat */
-
-    .input_area textarea {
-        flex-basis: 76%;
-    }
-
-    .input_area button {
-        flex-basis: 24%;
     }
 }
 
@@ -1100,16 +1095,5 @@ input:focus {
     /* thanks */
     .thanks_container p {
         width: 100% !important;
-    }
-
-
-    /* input  */
-
-    .input_area textarea {
-        flex-basis: 75%;
-    }
-
-    .input_area button {
-        flex-basis: 25%;
     }
 }
