--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -100,7 +100,7 @@
                 </ul>
             </div>
         </div>
-        <div class="col-lg-9 col-md-8 col-12 p-0">
+        <div class="col-lg-9 col-md-8 col-12 p-0" style="display: flex;flex-direction: column;">
             {{!-- chatter profile nav --}}
             <div class="chatting_profile border-bottom">
                 <div class="chatter_nav m-auto vertical-center pl-4">
