--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -103,7 +103,7 @@
         <div class="col-lg-9 col-md-8 col-12 p-0" style="display: flex;flex-direction: column;">
             {{!-- chatter profile nav --}}
             <div class="chatting_profile border-bottom">
-                <div class="chatter_nav m-auto vertical-center pl-4">
+                <div class="chatter_nav m-auto vertical-center pl-4 border-left">
                     <div class="d-inline-block align-middle">
                         <img class="chatter_profile_thumb" src="/images/profiles/male.jpg" alt="profile Image">
                     </div>
@@ -252,3 +252,4 @@
     </div>
 </section>
 <script src="/js/chat.js"></script>
+<script src="/js/chatApp.js"></script>
