--- a/views/find.handlebars
+++ b/views/find.handlebars
@@ -8,11 +8,11 @@
     <div class="wrapper">
         <div class="my-3 p-3 bg-white rounded shadow">
             <div class="border-bottom border-gray pb-3 d-flex" style="height: 4rem;">
-                <h4 class="align-items-center ml-3 d-sm-flex d-none">Suggestions</h4>
+                <h4 class="align-items-center ml-3 d-sm-flex d-none">Find Friends</h4>
 
                 <div class="input-group input-group-append align-items-center search_friend">
-                    <input type="text" class="form-control" placeholder="username or id" aria-label="Recipient's username" aria-describedby="button-addon2">
-                    <div class="input-group-append" style="height: 70%;">
+                    <input type="text" class="form-control" placeholder="username or id" aria-label="Recipient's username" aria-describedby="button-addon2" style="height: 100%;">
+                    <div class="input-group-append" style="height: 100%;">
                         <button class="btn btn-outline-primary" type="button" id="button-addon2">Search</button>
                     </div>
                 </div>
