--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -243,7 +243,7 @@
                 <div class="col-sm-6">
                     <div class="text-center">
                         <h4>Try 30 Days Free Trail</h4>
-                        <p>No credit card required.</p>
+                        <p class="mb-0">No credit card required.</p>
                     </div>
                 </div>
                 <div class="col-sm-6 vertical-center">
