--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,11 +32,11 @@
             {{/if}}
             <div class="container">
                 <a class="navbar-brand" href="#">FriendsBook</a>
-                <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon navbar_menu_icon vertical-center"><i class="fas fa-bars"></i></span>
+                <button class="navbar-toggler border-0" type="button" data-toggle="collapse"
+                    aria-controls="navbarNavAltMcarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon navbar_menu_icon vertical-center"><i class="fas fa-bars w-100"></i></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="collapse navbar-collapse nav_menu show">
                     <ul class="navbar-nav ml-auto">
                         <li><a class="nav-item nav-link active" href="/">Home</a></li>
                         <li><a class="nav-item nav-link" href="/thanks">Feature</a></li>
@@ -127,6 +127,11 @@
         <script src="/js/home.js"></script>
         {{/if}}
         <script src="/js/index.js"></script>
+        <script>
+            $(".navbar-toggler").click(()=> {
+                $(".nav_menu").toggleClass("nav_show");
+            })
+        </script>
 </body>
 
 </html>
