--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1090,38 +1090,6 @@ input:focus {
     }
 }
 
-/* coustomised menu bar */
-@media only screen and (min-width:0px)and (max-width:992px) {
-    .nav_menu {
-        background-color: #f6fbfe;
-        height: 100vh;
-        width: 100%;
-        position: fixed;
-        display: block;
-        transition: ease all 0.3s;
-        right: -100vw;
-        top: 3rem;
-    }
-
-    .nav_show {
-        right: 0px;
-    }
-
-    .nav_menu ul {
-        margin-top: 2rem;
-    }
-    
-    .nav_menu ul li:not(:last-child) {
-        margin: 0.05rem 1rem;
-        font-size: 1.5rem;
-    }
-    
-    .nav_menu ul li .nav-item.user_btn {
-        margin-left: 0px;
-        margin-top: 1rem;
-    }
-}
-
 /* chatapp */
 @media only screen and (min-width:0px)and (max-width:756px) {
     .chat_list_wrapper {
@@ -1159,4 +1127,23 @@ input:focus {
         margin-bottom: 3rem;
     }
 
+}
+
+
+@media only screen and (min-width:0px)and (max-width:992px) {
+    .navbar-nav ul li {
+        margin-top: 0.35rem;
+    }
+
+    .navbar-nav .user_btn {
+        width: 100%;
+        height: 2.5rem;
+        padding: 0px;
+        border-radius: 0px;
+        padding-top: 0.4rem !important; 
+        padding-bottom: 0.4rem !important; 
+        line-height: 1.5rem;
+        margin-top: 1rem;
+        margin-left: 0px;
+    }
 }
