--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,11 +32,11 @@
             {{/if}}
             <div class="container">
                 <a class="navbar-brand" href="#">FriendsBook</a>
-                <button class="navbar-toggler border-0" type="button" data-toggle="collapse"
+                <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#menu"
                     aria-controls="navbarNavAltMcarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon navbar_menu_icon vertical-center"><i class="fas fa-bars w-100"></i></span>
                 </button>
-                <div class="collapse navbar-collapse nav_menu show">
+                <div class="collapse navbar-collapse" id="menu">
                     <ul class="navbar-nav ml-auto">
                         <li><a class="nav-item nav-link active" href="/">Home</a></li>
                         <li><a class="nav-item nav-link" href="/thanks">Feature</a></li>
