--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -248,7 +248,7 @@
                 </div>
                 <div class="col-sm-6 vertical-center">
                     <div class="m-auto">
-                        <button type="button" class="btn btn-primary px-5 py-3">Get Started</button>
+                        <button type="button" class="btn btn-primary px-5 py-3">Get Started<i class="pl-3 fas fa-long-arrow-alt-right"></i></button>
                     </div>
                 </div>
             </div>
