--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,7 +39,7 @@
                 <div class="collapse navbar-collapse" id="menu">
                     <ul class="navbar-nav ml-auto">
                         <li><a class="nav-item nav-link active" href="/">Home</a></li>
-                        <li><a class="nav-item nav-link" href="/thanks">Feature</a></li>
+                        <li><a class="nav-item nav-link" href="/feature">Feature</a></li>
                         <li><a class="nav-item nav-link" href="/find">Find</a></li>
                         <li><a class="nav-item nav-link" href="/chat">Chatapp</a></li>
                         <li><a class="nav-item user_btn" href="/login">Login</a></li>
