--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,7 @@
         <div class="loader"></div>
         <p>Loading . . .</p>
     </div>
+    <span class="back"></span>
     <!-- navbar -->
     {{#if homepage}}
     <nav class="navbar navbar-expand-lg navbar-light navbar-expand-lg">
