--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -24,16 +24,16 @@
                 <form action="/register" method="POST" class="text-center">
                     <div class="form-row">
                         <div class="form-group col-12">
-                            <input type="text" class="form-control" placeholder="Enter full name">
+                            <input name="name" type="text" class="form-control" placeholder="Enter full name">
                         </div>
                         <div class="form-group col-12">
-                            <input type="email" class="form-control" placeholder="Email">
+                            <input name="email" type="email" class="form-control" placeholder="Email">
                         </div>
                         <div class="form-group col-12">
-                            <input type="password" class="form-control" placeholder="Password">
+                            <input name="password" type="password" class="form-control" placeholder="Password">
                         </div>
                         <div class="form-group col-12">
-                            <input type="password" class="form-control" placeholder="Confirm Password">
+                            <input name="confirmPassword" type="password" class="form-control" placeholder="Confirm Password">
                         </div>
                     </div>
                     <p>Already have account? <a href="/login">Log in</a></p>
