--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,6 +10,13 @@
                 </div>
                 {{/if}}
 
+                {{!-- flash --}}
+                {{#if flash.danger}}
+                <div class="alert alert-danger text-center mx-auto" role="alert" style="width:350px">
+                    {{flash.danger}}
+                </div>
+                {{/if}}
+
                 <div class="text-center mb-4">
                     <h3>Login</h3>
                     <p class="feature_main_para">Login with you preference, your information is save with us.</p>
