--- a/public/css/index.css
+++ b/public/css/index.css
@@ -15,7 +15,7 @@
 .fas:hover:not(.noHover),
 .fa:hover {
     color: #358df9d4 !important;
-}
+}c
 
 .menu_dots.fas.fa-times:hover {
     color: #f12828 !important;
