--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,6 +7,9 @@
                 {{#if flash.success}}
                 <div class="alert alert-success text-center mx-auto" role="alert" style="width:350px">
                     {{flash.success}}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <i class="fas fa-times noHover"></i>
+                    </button>
                 </div>
                 {{/if}}
 
@@ -14,6 +17,9 @@
                 {{#if flash.danger}}
                 <div class="alert alert-danger text-center mx-auto" role="alert" style="width:350px">
                     {{flash.danger}}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <i class="fas fa-times noHover"></i>
+                    </button>
                 </div>
                 {{/if}}
 
@@ -38,10 +44,10 @@
                 <form action="/login" method="POST" class="text-center">
                     <div class="form-row">
                         <div class="form-group col-12">
-                            <input type="email" class="form-control" placeholder="Email">
+                            <input type="email" class="form-control" placeholder="Email" required>
                         </div>
                         <div class="form-group col-12">
-                            <input type="password" class="form-control" placeholder="Password">
+                            <input type="password" class="form-control" placeholder="Password" required>
                         </div>
                     </div>
                     <p class="d-inline-block float-left"><a href="/forgot">Forgot Password?</a></p>
