--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -44,10 +44,10 @@
                 <form action="/login" method="POST" class="text-center">
                     <div class="form-row">
                         <div class="form-group col-12">
-                            <input type="email" class="form-control" placeholder="Email" required>
+                            <input type="email" name="email" class="form-control" placeholder="Email" required>
                         </div>
                         <div class="form-group col-12">
-                            <input type="password" class="form-control" placeholder="Password" required>
+                            <input type="password" name="password" class="form-control" placeholder="Password" required>
                         </div>
                     </div>
                     <p class="d-inline-block float-left"><a href="/forgot">Forgot Password?</a></p>
