--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -53,13 +53,13 @@
                             <input name="name" type="text" class="form-control" placeholder="Enter full name">
                         </div>
                         <div class="form-group col-12">
-                            <input name="email" type="email" class="form-control" placeholder="Email">
+                            <input name="email" type="email" class="form-control" placeholder="Email" required>
                         </div>
                         <div class="form-group col-12">
-                            <input name="password" type="password" class="form-control" placeholder="Password">
+                            <input name="password" type="password" class="form-control" placeholder="Password" required>
                         </div>
                         <div class="form-group col-12">
-                            <input name="confirmPassword" type="password" class="form-control" placeholder="Confirm Password">
+                            <input name="confirmPassword" type="password" class="form-control" placeholder="Confirm Password" required>
                         </div>
                     </div>
                     <p>Already have account? <a href="/login">Log in</a></p>
@@ -75,7 +75,7 @@
         $('input').focusin(() => {
             $('form button').attr("disabled", "disabled");
         });
-        $('[name="confirmPassword"]').on('input', () => {
+        $('[name="confirmPassword"],[name="password"]').on('input', () => {
             $('form button').attr("disabled", "disabled");
             const pass = $('[name="password"]').val();
             const confirmPass = $('[name="confirmPassword"]').val();
